tests/rosetta/out/Smalltalk/averages-pythagorean-means.out
/workspace/mochi/tests/rosetta/out/Smalltalk/averages-pythagorean-means.st:26: parse error, expected '|' or identifier
